demo-networkpolicy/debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug
  namespace: client2
spec:
  containers:
  - name: debug
    image: alpine:3.15
    #command: [ "sleep", "3600" ]
    args: [ "/bin/sh", "-c", "apk add --no-cache curl && sleep 3600" ]
