demo-networkpolicy/pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: client1
spec:
  replicas: 4
  strategy:
    #type: Recreate
    type: RollingUpdate
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      
      - name: nginx
        image: nginx:stable-alpine-perl  
        ports:
          - containerPort: 80
