demo-networkpolicy/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: client1
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress: 
    - from:
        - namespaceSelector:
            matchLabels:
              allow-ingress: "true"
